syntax = "proto3";
package api;

import "google/api/annotations.proto";

message PingRequest {
  float temperatureCelsius = 1;
}

message PingResponse {
  float temperatureFahrenheit = 1;
}

service Ping {
  rpc SayHello(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
        post: "/1/ping"
        body: "*"
    };
  }
}